--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "propaganistas/laravel-disposable-email": "^2.1",
         "yajra/laravel-datatables-oracle": "^10.2"
     },
     "require-dev": {
